--- a/Javascript/JS_P-4/index.html
+++ b/Javascript/JS_P-4/index.html
@@ -6,8 +6,11 @@
     <title>Javascript P-4</title>
 </head>
 <body>
-    <h1>Javascript P-4</h1>
-
+    <h1>To do App</h1>
+    <h3>Enter "list" to show all tasks</h3>
+    <h3>Enter "add" to add a task</h3>
+    <h3>Enter "delete" to remove a task</h3>
+    <h3>Enter "quit" to show all tasks</h3>
     <script src="app.js"></script>
 </body>
 </html>
