--- a/Javascript/JS_P-5/index.html
+++ b/Javascript/JS_P-5/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>JavaScript Part-5</h1>
-    <script src="app.js"></script>
+    <script src="game.js"></script>
+    <!-- <script src="app.js"></script> -->
 </body>
 </html>
