--- a/Javascript/JS_P-6/index.html
+++ b/Javascript/JS_P-6/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
+    <!-- <script src="pq-1.js"></script> -->
+    <!-- <script src="pq-2.js"></script> -->
+    <script src="arguments.js"></script>
 </body>
 </html>
