function chp completed

--- a/Javascript/JS_P-6/index.html
+++ b/Javascript/JS_P-6/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="index.js"></script> -->
     <!-- <script src="pq-1.js"></script> -->
     <!-- <script src="pq-2.js"></script> -->
-    <script src="arguments.js"></script>
+    <!-- <script src="arguments.js"></script> -->
+    <script src="Methods.js"></script>
 </body>
 </html>
