--- a/Javascript/JS_P-7/index.html
+++ b/Javascript/JS_P-7/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>JavaScript Part - 7</h1>
-    <script src="ArrowFunction.js"></script>
+    <script src="pq.js"></script>
 </body>
 </html>
